assignment 49: fix z-index

--- a/src/app/designsystem/forms-container/form-slider/form-slider.component.css
+++ b/src/app/designsystem/forms-container/form-slider/form-slider.component.css
@@ -3,8 +3,6 @@
     display: inline-block;
     width: 36px;
     height: 20px;
-    z-index: 1;
-    
   }
   
   .forms_switch input { 
